[gd_scene load_steps=5 format=3 uid="uid://b7v3xdiro0vpi"]

[ext_resource type="Theme" uid="uid://br7rkp2l10vsp" path="res://ui/hud/hud.tres" id="1_3mhc5"]
[ext_resource type="Script" path="res://ui/hud/player/player_hud.gd" id="2_5gs80"]
[ext_resource type="Texture2D" uid="uid://bmq7nmhvumig0" path="res://assets/misc/empty_heart.tres" id="3_eegih"]
[ext_resource type="Texture2D" uid="uid://bc8ruo2q3kes8" path="res://assets/misc/timer.tres" id="4_xc70j"]

[node name="PlayerHud" type="MarginContainer"]
texture_filter = 1
offset_right = 96.0
offset_bottom = 16.0
theme = ExtResource("1_3mhc5")
theme_override_constants/margin_left = 8
script = ExtResource("2_5gs80")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AbilityContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="DisplayLabel" type="Label" parent="MainContainer/AbilityContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
text = "MR.MUNCHKIN"
uppercase = true

[node name="StatusContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="HealthIcons" type="Control" parent="MainContainer/StatusContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HealthIcon" type="TextureRect" parent="MainContainer/StatusContainer/HealthIcons"]
layout_mode = 2
offset_left = 1.0
offset_right = 9.0
offset_bottom = 8.0
texture = ExtResource("3_eegih")

[node name="HealthIcon2" type="TextureRect" parent="MainContainer/StatusContainer/HealthIcons"]
layout_mode = 2
offset_left = 10.0
offset_right = 18.0
offset_bottom = 8.0
texture = ExtResource("3_eegih")

[node name="HealthIcon3" type="TextureRect" parent="MainContainer/StatusContainer/HealthIcons"]
layout_mode = 2
offset_left = 19.0
offset_right = 27.0
offset_bottom = 8.0
texture = ExtResource("3_eegih")

[node name="HealthIcon4" type="TextureRect" parent="MainContainer/StatusContainer/HealthIcons"]
layout_mode = 2
offset_left = 28.0
offset_right = 36.0
offset_bottom = 8.0
texture = ExtResource("3_eegih")

[node name="HealthIcon5" type="TextureRect" parent="MainContainer/StatusContainer/HealthIcons"]
layout_mode = 2
offset_left = 37.0
offset_right = 45.0
offset_bottom = 8.0
texture = ExtResource("3_eegih")

[node name="HealthIcon6" type="TextureRect" parent="MainContainer/StatusContainer/HealthIcons"]
layout_mode = 2
offset_left = 46.0
offset_right = 54.0
offset_bottom = 8.0
texture = ExtResource("3_eegih")

[node name="LifetimerContainer" type="HBoxContainer" parent="MainContainer/StatusContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="LifetimeIcon" type="TextureRect" parent="MainContainer/StatusContainer/LifetimerContainer"]
layout_mode = 2
texture = ExtResource("4_xc70j")

[node name="LifetimeLabel" type="Label" parent="MainContainer/StatusContainer/LifetimerContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00"
